# ban-instance

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  ban-instance.cabal  ban-instance.nix  default.nix
.github/workflows/: haskell-ci.yml
nix/: nixpkgs.json
src/Language/Haskell/Instance/: Ban.hs
test/: Spec.hs
